improve signup function

--- a/reportit/webpage/templates/webpage/reporterSignup.html
+++ b/reportit/webpage/templates/webpage/reporterSignup.html
@@ -2,12 +2,10 @@
 <html lang="en">
     <head> 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		{% load staticfiles %}
-		<link rel="stylesheet" type="text/css" href="{% static 'webpage/signup' %}"/>
 
 		<!-- Website CSS style -->
 		{% load staticfiles %}
-		<link rel="stylesheet" type="text/css" href="{% static 'webpage/signup' %}"/>
+		<link rel="stylesheet" type="text/css" href="{% static 'webpage/signup.css' %}"/>
 
 		<!-- Website Font style -->
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -16,32 +14,46 @@
 		<link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 
-		<title>Admin</title>
+		<title>Reporter Signup</title>
 	</head>
 	<body>
 		<div class="container">
 			<div class="row main">
 				<div class="panel-heading">
 	               <div class="panel-title text-center">
-	               		<h1 class="title">ReportIt Register</h1>
+	               		<h1 class="title">ReportIt Reporter Signup</h1>
 	               		<hr />
 	               	</div>
 	            </div> 
 				<div class="main-login main-center">
 					<form class="form-horizontal" method="post" action="#">
-						
+						{% csrf_token %}
+
+						{% for field in form %}
+						<p>
+							{{ field.label_tag }}<br>
+        					{{ field }}
+        					{% if field.help_text %}
+          						<small style="color: grey">{{ field.help_text }}</small>
+        					{% endif %}
+       						 {% for error in field.errors %}
+							<p style="color: red">{{ error }}</p>
+						{% endfor %}
+					  </p>
+					{% endfor %}
+						<!--
 						<div class="form-group">
-							<label for="name" class="cols-sm-2 control-label">Your UserName</label>
+							<label for="username" class="cols-sm-2 control-label">UserName</label>
 							<div class="cols-sm-10">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-									<input type="text" class="form-control" name="name" id="name"  placeholder="Enter your UserName"/>
+									<input type="text" class="form-control" name="username" id="username"  placeholder="Enter your UserName"/>
 								</div>
 							</div>
 						</div>
 
 						<div class="form-group">
-							<label for="email" class="cols-sm-2 control-label">Your Email</label>
+							<label for="email" class="cols-sm-2 control-label">Email</label>
 							<div class="cols-sm-10">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
@@ -51,37 +63,27 @@
 						</div>
 
 						<div class="form-group">
-							<label for="username" class="cols-sm-2 control-label">Username</label>
+							<label for="password1" class="cols-sm-2 control-label">Password</label>
 							<div class="cols-sm-10">
 								<div class="input-group">
-									<span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-									<input type="text" class="form-control" name="username" id="username"  placeholder="Enter your Username"/>
+									<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+									<input type="password" class="form-control" name="password" id="password1"  placeholder="Enter your Password"/>
 								</div>
 							</div>
 						</div>
 
 						<div class="form-group">
-							<label for="password" class="cols-sm-2 control-label">Password</label>
+							<label for="password2" class="cols-sm-2 control-label">Confirm Password</label>
 							<div class="cols-sm-10">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-									<input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password"/>
+									<input type="password" class="form-control" name="confirm" id="password2"  placeholder="Confirm your Password"/>
 								</div>
 							</div>
-						</div>
-
-						<div class="form-group">
-							<label for="confirm" class="cols-sm-2 control-label">Confirm Password</label>
-							<div class="cols-sm-10">
-								<div class="input-group">
-									<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-									<input type="password" class="form-control" name="confirm" id="confirm"  placeholder="Confirm your Password"/>
-								</div>
-							</div>
-						</div>
+						</div>-->
 
 						<div class="form-group ">
-							<button type="button" class="btn btn-primary btn-lg btn-block login-button">Register</button>
+							<button type="submit" class="btn btn-primary btn-lg btn-block login-button">Register</button>
 						</div>
 						<div class="login-register">
 				            <a href="/">Login</a>
