--- a/reportit/webpage/templates/webpage/login.html
+++ b/reportit/webpage/templates/webpage/login.html
@@ -14,6 +14,8 @@
 						<div class="row">
 							<div class="col-lg-12">
 								<form id="login-form" action="https://phpoll.com/login/process" method="post" role="form" style="display: block;">
+									{% csrf_token %}
+
 									<div class="form-group">
 										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
 									</div>
@@ -39,7 +41,7 @@
 												</div>
 
 												<div class="col-xs-6">
-													<a href="/signup" id="register-form-link">Register</a>
+													<a href="/reporterSignup" id="register-form-link">Signup As Reporter</a>
 												</div>
 											</div>
 										</div>
