improve login function

--- a/reportit/webpage/templates/registration/login.html
+++ b/reportit/webpage/templates/registration/login.html
@@ -1,3 +1,23 @@
+
+{% block content %}
+  <h2>Login</h2>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Login</button>
+  </form>
+{% endblock %}
+
+<div class="signup">
+    <a href="/login">Signup</a>
+</div>
+
+<div class="homepage">
+    <a href="/">Homepage</a>
+</div>
+
+
+<!--
 <div class="container">
     	<div class="row">
 			<div class="col-md-6 col-md-offset-3">
@@ -75,3 +95,4 @@
 			</div>
 		</div>
 	</div>
+-->
