--- a/reportit/webpage/templates/webpage/reporterSignup.html
+++ b/reportit/webpage/templates/webpage/reporterSignup.html
@@ -85,8 +85,8 @@
 						<div class="form-group ">
 							<button type="submit" class="btn btn-primary btn-lg btn-block login-button">Register</button>
 						</div>
-						<div class="login-register">
-				            <a href="/">Login</a>
+						<div class="login">
+				            <a href="/login">Login</a>
 				         </div>
 					</form>
 				</div>
