Added basic template for  Concern submission module Added 404 Page Added migration file to gitignore

--- a/reportit/webpage/templates/webpage/index.html
+++ b/reportit/webpage/templates/webpage/index.html
@@ -33,7 +33,7 @@
 					<h2>ReportIt</h2>
 					<p>An intuitive, convienient concern reporting platform.</p>
 					<ul class="actions">
-						<li><a href="/login" class="button">Log In</a></li>
+						<li><a href="/login/" class="button">Log In</a></li>
 					</ul>
 					<ul class="actions">
 						<li><a href="/agentSignup" class="button special">Agent Sign Up</a></li>
