--- a/reportit/webpage/templates/webpage/dashboard.html
+++ b/reportit/webpage/templates/webpage/dashboard.html
@@ -10,6 +10,8 @@
     {% if user.is_authenticated %}
       <li><a href="/account/profile/">{{request.user.username}}'s Profile </a></li>
       <li><a href="/logout?next=/"> Log out</a></li>
+      <li><a href="/logout/">Logout</a></li>
+      <li><a href="/account/submitConcern/">SubmitConcern</a></li>
     {% else %}
       <li><a href="/login/">Login</a></li>
       <li><a href="/reporterSignup">ReporterSignup</a></li>
