redirect to dashboard after login

--- a/reportit/webpage/templates/registration/login.html
+++ b/reportit/webpage/templates/registration/login.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 <div class="signup">
-    <a href="/login">Signup</a>
+    <a href="/reporterSignup">ReporterSignup</a>
 </div>
 
 <div class="homepage">
