--- a/reportit/webpage/templates/registration/login.html
+++ b/reportit/webpage/templates/registration/login.html
@@ -4,7 +4,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button name="submitbutton" type="submit">Login</button>
   </form>
 {% endblock %}
 
