--- a/reportit/webpage/templates/webpage/agentSignup.html
+++ b/reportit/webpage/templates/webpage/agentSignup.html
@@ -29,7 +29,20 @@
 					<form class="form-horizontal" method="post" action="#">
 						{% csrf_token %}
 
-						{% for field in form %}
+						{% for field in form1 %}
+						<p>
+							{{ field.label_tag }}<br>
+        					{{ field }}
+        					{% if field.help_text %}
+          						<small style="color: grey">{{ field.help_text }}</small>
+        					{% endif %}
+       						 {% for error in field.errors %}
+							<p style="color: red">{{ error }}</p>
+						{% endfor %}
+					  </p>
+					{% endfor %}
+
+					{% for field in form2 %}
 						<p>
 							{{ field.label_tag }}<br>
         					{{ field }}
