--- a/reportit/webpage/templates/webpage/dashboard.html
+++ b/reportit/webpage/templates/webpage/dashboard.html
@@ -9,7 +9,7 @@
 <body>
     {% if user.is_authenticated %}
       <li><a href="/account/profile/">{{request.user.username}}'s Profile </a></li>
-      <li><a href="/logout/">Logout</a></li>
+      <li><a href="/logout?next=/"> Log out</a></li>
     {% else %}
       <li><a href="/login/">Login</a></li>
       <li><a href="/reporterSignup">ReporterSignup</a></li>
