add name and id to all the link and button

--- a/reportit/webpage/templates/webpage/agentSignup.html
+++ b/reportit/webpage/templates/webpage/agentSignup.html
@@ -57,10 +57,13 @@
 
 
 						<div class="form-group ">
-							<button type="submit" class="btn btn-primary btn-lg btn-block login-button">Register</button>
+							<button type="submit" class="signup-button"  name="signup_submit" id="signup_submit">Register</button>
 						</div>
 						<div class="login">
-				            <a href="/login">Login</a>
+				            <a href="/login" name="login" id="login">Login</a>
+				         </div>
+						<div class="hoempage">
+				            <a href="/" name="hoempage" id="hoempage">Homepage</a>
 				         </div>
 					</form>
 				</div>
