--- a/reportit/webpage/templates/webpage/login.html
+++ b/reportit/webpage/templates/webpage/login.html
@@ -25,20 +25,20 @@
       <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Login</button>
+        <button type="submit" name="login-submit" id="login-submit">Login</button>
       </form>
     {% endblock %}
 
     <div class="reporterSignup">
-        <a href="/reporterSignup">ReporterSignup</a>
+        <a href="/reporterSignup" name="reporterSignup" id="reporterSignup">ReporterSignup</a>
     </div>
 
     <div class="agentSignup">
-        <a href="/agentSignup">AgentSignup</a>
+        <a href="/agentSignup" name="agentSignup" id="agentSignup">AgentSignup</a>
     </div>
 
     <div class="homepage">
-        <a href="/">Homepage</a>
+        <a href="/" name="home" id="home">Homepage</a>
     </div>
 </body>
 
