--- a/reportit/webpage/templates/webpage/index.html
+++ b/reportit/webpage/templates/webpage/index.html
@@ -42,16 +42,35 @@
 				</section>
 
 
+				<section id="main" class="container">
+					<section class="box special">						
+						<header class="major">							
+							<h2>Need to Report concerns to government agents?						<br />
+ 							ReportIt helps you!</h2>
+ 							<p>ReportIt creates an integrated platform for users to express their concern to different agencies while allows agents to respond to public concerns efficiently</p>
+ 						</header>
+					</section>
+ 
+ 					<section class="box special features">
+ 						<div class="features-row">
+ 							<section>
+ 								<span class="icon major fa-bolt accent2"></span>
+ 								<h3>Efficient</h3>
+ 								<p>ReportIt helps both reporters and agents to deal with public concerns efficiently. On one platform, reporters can contact multiple agents to solve public concerns.</p>
+ 							</section>
+ 							<section>
+ 								<span class="icon major fa-file-image-o accent3"></span>
+ 								<h3>File Upload</h3>
+ 								<p>ReportIt supports Image and File Upload which allows agents to view the evidence of concern reports.</p>
+ 							</section>
+ 						</div>
+ 					</section>
+				</section>
+
+
 			<!-- Footer -->
 				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-					</ul>
+					
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
