--- a/reportit/webpage/static/webpage/signup.css
+++ b/reportit/webpage/static/webpage/signup.css
@@ -33,12 +33,16 @@ hr{
 
 label{
 	margin-bottom: 15px;
+    font-size: 18px;
 }
 
 input,
 input::-webkit-input-placeholder {
     font-size: 11px;
     padding-top: 3px;
+    width: 100%;
+    padding: 7px;
+    border-radius: 4px;
 }
 
 .main-login{
@@ -56,13 +60,18 @@ input::-webkit-input-placeholder {
 .main-center{
  	margin-top: 30px;
  	margin: 0 auto;
- 	max-width: 330px;
+ 	max-width: 500px;
     padding: 40px 40px;
 
 }
 
 .login-button{
-	margin-top: 5px;
+	
+    margin-left: 15%;
+    margin-top: 20px;
+    font-size: 18px;
+    text-align: center;
+    width: 70%;
 }
 
 .login-register{
