--- a/reportit/webpage/templates/webpage/reporterSignup.html
+++ b/reportit/webpage/templates/webpage/reporterSignup.html
@@ -5,8 +5,9 @@
 
 		<!-- Website CSS style -->
 		{% load staticfiles %}
+		
+		<link rel="stylesheet" type="text/css" href="{% static 'webpage/bootstrap.css' %}"/>
 		<link rel="stylesheet" type="text/css" href="{% static 'webpage/signup.css' %}"/>
-
 		<!-- Website Font style -->
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 		
@@ -33,10 +34,8 @@
 						<p>
 							{{ field.label_tag }}<br>
         					{{ field }}
-        					{% if field.help_text %}
-          						<small style="color: grey">{{ field.help_text }}</small>
-        					{% endif %}
-       						 {% for error in field.errors %}
+        					
+       						{% for error in field.errors %}
 							<p style="color: red">{{ error }}</p>
 						{% endfor %}
 					  </p>
@@ -83,19 +82,21 @@
 						</div>-->
 
 						<div class="form-group ">
-							<button type="submit" class="signup_submit" name="signup_submit" id="signup_submit">Register</button>
+							<button type="submit" class="btn btn-primary login-button" name="signup_submit" id="signup_submit">Register</button>
 						</div>
-						<div class="login">
+						<div class="btn login">
 				            <a href="/login" name="login" id="login">Login</a>
 				         </div>
-						<div class="hoempage">
+						<div class="btn homepage">
 				            <a href="/" name="hoempage" id="hoempage">Homepage</a>
+				         </div>
+				         <div class="btn reporter">
+				            <a href="/agentSignup" name="agent" id="agent">Agent Signup</a>
 				         </div>
 					</form>
 				</div>
 			</div>
 		</div>
 
-		<script type="text/javascript" src="assets/js/bootstrap.js"></script>
 	</body>
 </html>
