--- a/reportit/webpage/templates/webpage/concern.html
+++ b/reportit/webpage/templates/webpage/concern.html
@@ -5,6 +5,7 @@
 
 		<!-- Website CSS style -->
 		{% load staticfiles %}
+		<link rel="stylesheet" type="text/css" href="{% static 'webpage/bootstrap.css' %}"/>
 		<link rel="stylesheet" type="text/css" href="{% static 'webpage/signup.css' %}"/>
 
 		<!-- Website Font style -->
@@ -21,7 +22,7 @@
 			<div class="row main">
 				<div class="panel-heading">
 	               <div class="panel-title text-center">
-	               		<h1 class="title">ReportIt Submit Concern</h1>
+	               		<h1 class="title" style="margin:auto">ReportIt Submit Concern</h1>
 	               		<hr />
 	               	</div>
 	            </div>
@@ -44,7 +45,5 @@
 				</div>
 			</div>
 		</div>
-
-		<script type="text/javascript" src="assets/js/bootstrap.js"></script>
 	</body>
 </html>
