--- a/reportit/webpage/templates/webpage/login.html
+++ b/reportit/webpage/templates/webpage/login.html
@@ -18,6 +18,33 @@
 	               		<hr />
 	               	</div>
 	            </div>
+
+	            <div class="main-login main-center">
+		            {% block content %}
+				      <form method="post">
+				        {% csrf_token %}
+				        {{ form.as_p }}
+				        <button type="submit" class="btn btn-primary login-button"name="login-submit" id="login-submit">Login</button>
+				      </form>
+				    {% endblock %}
+
+				    <div class="btn reporterSignup">
+				        <a href="/reporterSignup" name="reporterSignup" id="reporterSignup">ReporterSignup</a>
+				    </div>
+
+				    <div class="btn agentSignup">
+				        <a href="/agentSignup" name="agentSignup" id="agentSignup">AgentSignup</a>
+				    </div>
+
+				    <div class="btn homepage">
+				        <a href="/" name="home" id="home">Homepage</a>
+				    </div>
+
+					<div class="btn forgetPassword">
+				        <a href="/password_reset/" name="forget_password" id="forget_password">Forget Password</a>
+				    </div>
+				</div>
+
             </div>
         </div>
 
