--- a/reportit/webpage/templates/webpage/dashboard.html
+++ b/reportit/webpage/templates/webpage/dashboard.html
@@ -11,6 +11,7 @@
     <li><a href="/account/profile/" name="profile" id="profile">{{request.user.username}}'s Profile </a></li>
       <li><a href="/logout?next=/" name="logout" id="logout"> Log out</a></li>
       <li><a href="/account/submitConcern/">SubmitConcern</a></li>
+      <li><a href="/account/viewConcern/">View My Concerns</a></li>
     {% else %}
       <li><a href="/login" name="login" id="login">Login</a></li>
       <li><a href="/reporterSignup" name="reporterSignup" id="reporterSignup">ReporterSignup</a></li>
