reporter class finish

--- a/reportit/webpage/templates/webpage/reporterSignup.html
+++ b/reportit/webpage/templates/webpage/reporterSignup.html
@@ -30,16 +30,26 @@
 					<form class="form-horizontal" method="post" action="#">
 						{% csrf_token %}
 
-						{% for field in form %}
+						{% for field in form1 %}
 						<p>
 							{{ field.label_tag }}<br>
         					{{ field }}
         					
        						{% for error in field.errors %}
 							<p style="color: red">{{ error }}</p>
+							{% endfor %}
 						{% endfor %}
-					  </p>
-					{% endfor %}
+
+						{% for field in form2 %}
+						<p>
+							{{ field.label_tag }}<br>
+        					{{ field }}
+        					
+       						{% for error in field.errors %}
+							<p style="color: red">{{ error }}</p>
+							{% endfor %}
+					  	</p>
+						{% endfor %}
 						<!--
 						<div class="form-group">
 							<label for="username" class="cols-sm-2 control-label">UserName</label>
