--- a/reportit/webpage/templates/webpage/newprofile.html
+++ b/reportit/webpage/templates/webpage/newprofile.html
@@ -1,182 +1,82 @@
-<!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>ReportIt</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		{% load staticfiles %}
-		<link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body>
-		<div id="page-wrapper">
+{% extends "webpage/base.html" %}
+{% load static %}
+<section id="main" class="container">
+<header>
+<h2>My Profile</h2>
+<p>Just an assorted selection of elements.</p>
+</header>
 
-			<!-- Header -->
-				<header id="header">
-					<h1><a href="index.html">ReportIt</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#" class="icon fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							{% if not user.is_authenticated %}
-							<li><a href="#" class="button">Sign Up</a></li>
-							{% else %}
-							<li><a href="/logout?next=/" class="button">Log Out</a></li>
-							{% endif %}
-						</ul>
-					</nav>
-				</header>
+{% block content %}
+<div class="row">
+<div class="12u">
 
-		{% if not user.is_authenticated %}
-		<div class="row">
-            <div class="12u">
+<!-- Table -->
+<section class="box">
+	<div class="table-wrapper">
+		<table>
+			<thead>
+				<tr>
+					<th>Name</th>
 
-              <!-- Text -->
-                <section class="box">
-                  <header>
-                    <h3>Please Log in</h3>
-                  <hr />
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Username</td>
+					<td>Ante turpis integer aliquet porttitor.</td>
+
+				</tr>
+				<tr>
+					<td>First Name</td>
+					<td>Vis ac commodo adipiscing arcu aliquet.</td>
+
+				</tr>
+				<tr>
+					<td>Last Name</td>
+					<td> Morbi faucibus arcu accumsan lorem.</td>
+
+				</tr>
+				<tr>
+					<td>Gender</td>
+					<td>Vitae integer tempus condimentum.</td>
+
+				</tr>
+				<tr>
+					<td>Phone Number</td>
+					<td>Ante turpis integer aliquet porttitor.</td>
+
+				</tr>
+				<tr>
+					<td>Address</td>
+					<td>Ante turpis integer aliquet porttitor.</td>
+				</tr>
+				<tr>
+					<td>Bio</td>
+					<td>Ante turpis integer aliquet porttitor.</td>
+
+				</tr>
+			</tbody>
+			<tfoot>
+				<tr>
+					<td>
+					<div class="12u">
 						<ul class="actions">
-							<li><a href="/login" class="button special">Log In</a></li>
-							<li><a href="/reporterSignup" class="button">Reporter Signup</a></li>
-							<li><a href="/agentSignup" class="button alt">Agent Signup</a></li>
+							<li><input type="submit" value="Submit" /></li>
+							<li><input type="reset" value="Cancel" class="alt" /></li>
 						</ul>
-
-                </section>
-
-            </div>
-          </div>
-        {% else %}
-			<!-- Main -->
-				<section id="main" class="container">
-					<header>
-						<h2>My Profile</h2>
-						<p>Just an assorted selection of elements.</p>
-					</header>
-
-
-					<div class="row">
-						<div class="12u">
-
-							<!-- Table -->
-								<section class="box">
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Username</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-
-												</tr>
-												<tr>
-													<td>First Name</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-
-												</tr>
-												<tr>
-													<td>Last Name</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-
-												</tr>
-												<tr>
-													<td>Gender</td>
-													<td>Vitae integer tempus condimentum.</td>
-
-												</tr>
-												<tr>
-													<td>Phone Number</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-
-												</tr>
-												<tr>
-													<td>Address</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-												</tr>
-												<tr>
-													<td>Bio</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td>
-													<div class="12u">
-														<ul class="actions">
-															<li><input type="submit" value="Submit" /></li>
-															<li><input type="reset" value="Cancel" class="alt" /></li>
-														</ul>
-													</div>
-													</td>
-													
-												</tr>
-											</tfoot>
-
-										</table>
-									</div>
-
-								</section>
-
-						</div>
 					</div>
-					<div class="row">
-						<div class="12u">
+					</td>
+					
+				</tr>
+			</tfoot>
 
-			{% endif %}
+		</table>
+	</div>
 
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
+</section>
+</div>
+</div>
 
-		</div>
+{% endblock %}
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollgress.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+						
