profile page ui change

--- a/reportit/webpage/templates/webpage/newprofile.html
+++ b/reportit/webpage/templates/webpage/newprofile.html
@@ -7,6 +7,14 @@
 </header>
 
 {% block content %}
+
+<section id="main" class="container">
+
+<header>
+	<h2>My Profile</h2>
+	<p>My profile content</p>
+</header>
+
 <div class="row">
 <div class="12u">
 
@@ -76,6 +84,7 @@
 </section>
 </div>
 </div>
+</section>
 
 {% endblock %}
 
