Improve concern submission logic: 	- Modified Concern model to store Reporter as Reporter (not User) 	- Took care of corner case of non-reporter submitting concern from backend
Add id to Concern submission page

--- a/reportit/webpage/templates/webpage/concern.html
+++ b/reportit/webpage/templates/webpage/concern.html
@@ -40,7 +40,7 @@
 					  {{ form.content }}
 					  <br><br>
 					
-					<button type="submit" class="btn btn-primary btn-lg btn-block login-button">Submit</button>
+					<button type="submit" id="concern_submit_button" class="btn btn-primary btn-lg btn-block login-button">Submit</button>
 					</form> 
 				</div>
 			</div>
