implement forget password function

--- a/reportit/webpage/templates/registration/password_reset_form.html
+++ b/reportit/webpage/templates/registration/password_reset_form.html
@@ -31,13 +31,20 @@
 
 
 
-                        {% block content %}
-                          <form method="post">
-                            {% csrf_token %}
-                            {{ form.as_p }}
-                            <button type="submit" class="btn btn-primary login-button" name="signup_submit" id="signup_submit">Send verification email</button>
-                          </form>
-                        {% endblock %}
+                        {% block title %}
+							Reset Password{% endblock %}
+
+							{% block content %}
+							<p>Please specify your email address to receive instructions for resetting it.</p>
+
+							<form action="" method="post">
+								<div style="display:none">
+									<input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
+								</div>
+								 {{ form.email.errors }}
+								<p><label>E-mail address:</label> {{ form.email }} <input type="submit" value="Send verification email" /></p>
+							</form>
+							{% endblock %}
 
 						<div class="btn login">
 				            <a href="/login" name="login" id="login">Login</a>
