--- a/reportit/webpage/templates/registration/password_reset_complete.html
+++ b/reportit/webpage/templates/registration/password_reset_complete.html
@@ -2,5 +2,5 @@
 
 {% block content %}
 <p>Your password has been set.  You may go ahead and log in now.</p>
-<p><a href="/login">Log in</a></p>
+<p><a href="/login" name="login" id="login">Log in</a></p>
 {% endblock %}
