--- a/reportit/webpage/templates/webpage/base.html
+++ b/reportit/webpage/templates/webpage/base.html
@@ -13,7 +13,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		{% load staticfiles %}
+		<link rel="stylesheet" href="{% static 'webpage/bootstrap.css' %}" />
 		<link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
+		<link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="{% static 'webpage/signup.css' %}"/>
+
+
+		{% block css %}
+  		{% endblock %}
+
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
@@ -56,7 +65,28 @@
          </div>
         {% else %}
 			<!-- Main -->
-			{% block content %}{% endblock %}
+			<section style="padding: 20px">
+				<div class="col-md-3" style="padding-top:50px">
+					<div class="panel">
+						<div class="panel-heading">ReportIt Menu</div>
+						<div class="panel-body">
+							<ul class="list-group" style="list-style-type:none">
+
+							<li><a href="/account/dashboard/" class="list-group-item" name="profile" id="dashboard">Dashboard</a></li>
+
+						    <li><a href="/account/profile/" class="list-group-item" name="profile" id="profile">{{request.user.username}}'s Profile </a></li>
+						    
+						      <li><a href="/account/submitConcern/" class="list-group-item">SubmitConcern</a></li>
+						      <li><a href="/account/viewConcern/" class="list-group-item">View My Concerns</a></li>
+						    </ul>
+						</div>
+					</div>
+					
+				</div>
+				<div class="col-md-9">
+					{% block content %}{% endblock %}
+				</div>
+			</section>
 
 		{% endif %}
 		{% block footer %}
