test choice not good

--- a/reportit/webpage/templates/webpage/concern.html
+++ b/reportit/webpage/templates/webpage/concern.html
@@ -1,6 +1,8 @@
 {% extends "webpage/base.html" %}
 {% load static %}
-
+{% block css %}
+<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css" rel="stylesheet" />
+{% endblock %}
 <!--
     <head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -56,3 +58,4 @@
 			</div>
 		</section>
 {% endblock %}
+
