--- a/reportit/webpage/templates/webpage/viewPersonalConcern.html
+++ b/reportit/webpage/templates/webpage/viewPersonalConcern.html
@@ -30,11 +30,13 @@
 			<h2>My Concerns</h2>
 			<p>All of the concerns that have been published.</p>
 		</header>
+		{% if concernNotExist %}
+        <div id="require-signup" class="alert alert-danger alert-dismissible" role="alert">Cannot find your concern!</div>
+        {% endif %}
 
 
 		<div class="row">
 			<div class="12u">
-
 				<!-- Table -->
 					<section class="box">
 						<div class="table-wrapper">
@@ -72,8 +74,15 @@
 										   <td> 
 										   	<!-- <input type="submit" value="View" href="/ViewPersonalConcern"/> -->
 
-										   	<a href="/ViewPersonalConcern" class="button">View</a>
+										   	<!-- <a href="/ViewPersonalConcern" class="button">View</a> -->
 										   	
+											<form method="post" action="/account/viewSpecificConcern/id?={{ item.concern_id }}">
+
+											{% csrf_token %}
+
+											<button type="submit" id="concern_submit_button" class="btn btn-primary ">View</button>
+											</form> 
+
 										   </td>
 
 									  </tr>
