fix concern page bug

--- a/reportit/webpage/templates/webpage/concern.html
+++ b/reportit/webpage/templates/webpage/concern.html
@@ -3,24 +3,7 @@
 {% block css %}
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css" rel="stylesheet" />
 {% endblock %}
-<!--
-    <head>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		
-		{% load staticfiles %}
-		<link rel="stylesheet" type="text/css" href="{% static 'webpage/bootstrap.css' %}"/>
-		
-
-		
-	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-
-		
-		
-
-		<title>Agent Signup</title>
-	</head>
-	-->
 
 
 {% block content %}
@@ -54,5 +37,8 @@
 						</div>
 						</div>
 					</section>
+				</div>
+			</div>
+		</section>
 {% endblock %}
 
