use new method to post

--- a/reportit/webpage/templates/webpage/concern.html
+++ b/reportit/webpage/templates/webpage/concern.html
@@ -2,6 +2,12 @@
 {% load static %}
 {% block css %}
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css" rel="stylesheet" />
+<style type="text/css">
+.select2-container--default .select2-selection--multiple {
+	background-color:#f8f8f8;
+}
+
+</style>
 {% endblock %}
 
 
@@ -19,6 +25,7 @@
 					<section class="box">
 						<div class="table-wrapper">
 						<div class="main-login main-center">
+							<!--
 							<form method="post" action="/account/submitConcern/">
 							{% csrf_token %}
 
@@ -33,7 +40,26 @@
 							  <br><br>
 							
 							<button type="submit" id="concern_submit_button" class="btn btn-primary btn-lg btn-block login-button">Submit</button>
+							</form> -->
+
+							<form id="submitconcern">
+							  Title:<br>
+							  <input type="text" name="title" required id="id_title" maxlength="500" />
+							  <br>
+							  Target Agency:<br>
+							  <select id="selectagent" name="agent" multiple="multiple" required style="background-color:inherit">
+							  	{% for o in agent_legalnames %}
+								    <option value="{{o}}">{{o}}</option>
+								{% endfor %}								  
+								</select>							  
+							Content:<br>
+							  <textarea name="content" rows="4" cols="50" required id="id_content" maxlength="500"></textarea>
+							  <br><br>
+							
+							
 							</form> 
+
+							<button type="submit" id="concern_submit_button" class="btn btn-primary btn-lg btn-block login-button">Submit</button>
 						</div>
 						</div>
 					</section>
@@ -42,3 +68,10 @@
 		</section>
 {% endblock %}
 
+
+{% block scripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
+<script src="{% static 'assets/js/concern.js' %}"></script>
+
+
+{% endblock %}
